--- a/fakestore-ecommerce/.env
+++ b/fakestore-ecommerce/.env
@@ -25,6 +25,14 @@ VITE_ENABLE_SEARCH = true
 VITE_AUTH0_DOMAIN = your-auth0-domain.us.auth0.com
 VITE_AUTH0_CLIENT_ID = your-client-id-here
 
+# Firebase Configuration #
+VITE_FIREBASE_API_KEY = AIzaSyDcCcBzNjAVfKm-D--xhsFIXMLnSWHlUvU
+VITE_FIREBASE_AUTH_DOMAIN = e-commerce-web-app-53dd6.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID = e-commerce-web-app-53dd6
+VITE_FIREBASE_STORAGE_BUCKET = e-commerce-web-app-53dd6.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID = 956362230963
+VITE_FIREBASE_APP_ID = 1:956362230963:web:fbf71f77f0b8c3dc49f4c6
+
 # Future Payment Integration (placeholder values) #
 # VITE_STRIPE_PUBLIC_KEY = pk_test_your_stripe_key_here #
 # VITE_PAYPAL_CLIENT_ID = your_paypal_client_id_here #
